--- a/dang-ky.html
+++ b/dang-ky.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <link rel="stylesheet" href="./css/bootstrap.css">
-        <script src="./js/bootstrap.js"></script>
-        <style>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="./css/bootstrap.css">
+  <script src="./js/bootstrap.js"></script>
+  <style>
     .login-block {
       background: #DE6262;
       background: -webkit-linear-gradient(to bottom, #FFB88C, #DE6262);
@@ -95,56 +94,54 @@
       color: #fff;
     }
   </style>
-    </head>
+</head>
 
-    <body ng-app="myApp" ng-controller="myCtrl" class="container login-block">
-        <div class="mx-auto" style="width:30rem;">
-            <div class="panel">
-                <div class="login-sec">
-                    <h2 class="text-center">ĐĂNG KÝ</h2>
-                    <form class="login-form">
-                        <div class="form-group">
-                            <label class="text-uppercase">Tài khoản</label>
-                            <input type="text" class="form-control">
-                        </div>
-                        <div class="form-group mt-2">
-                            <label class="text-uppercase">Mật khẩu</label>
-                            <input type="password" class="form-control">
-                        </div>
-                        <div class="form-group mt-2">
-                            <label class="text-uppercase">Email</label>
-                            <input type="password" class="form-control">
-                        </div>
-                        <div class="form-group mt-2">
-                            <label class="text-uppercase">Giới tính</label>
-                            <br>
-                            <div class="border p-2 rounded-2">
-                                <label class="d-inline-block me-3">
-                                    <input name="gender" type="radio"
-                                        class="form-check float-start me-2">
-                                    <span>Nam</span>
-                                </label>
-                                <label class="d-inline-block">
-                                    <input name="gender" type="radio"
-                                        class="form-check float-start me-2">
-                                    <span>Nữ</span>
-                                </label>
-                            </div>
-                        </div>
-                        <div class="form-check ps-0 mt-2">
-                            <button type="submit" class="btn btn-login
-                                float-right mt-2">Đăng ký</button>
-                        </div>
-                    </form>
-                </div>
+<body class="container login-block">
+  <div class="mx-auto" style="width:30rem;">
+    <div class="panel">
+      <div class="login-sec">
+        <h2 class="text-center">ĐĂNG KÝ</h2>
+        <form class="login-form">
+          <div class="form-group">
+            <label class="text-uppercase">Tài khoản</label>
+            <input ng-model="account.username" type="text" class="form-control">
+          </div>
+          <div class="form-group mt-2">
+            <label class="text-uppercase">Mật khẩu</label>
+            <input ng-model="account.password" type="password" class="form-control">
+          </div>
+          <div class="form-group mt-2">
+            <label class="text-uppercase">Email</label>
+            <input ng-model="account.email" type="email" class="form-control">
+          </div>
+          <div class="form-group mt-2">
+            <label class="text-uppercase">Họ và tên</label>
+            <input ng-model="account.fullname" type="text" class="form-control">
+          </div>
+          <div class="form-group mt-2">
+            <label class="text-uppercase">Sinh nhật</label>
+            <input ng-model="account.birthday" type="date" class="form-control">
+          </div>
+          <div class="form-group mt-2">
+            <label class="text-uppercase">Giới tính</label>
+            <br>
+            <div class="border p-2 rounded-2">
+              <label class="d-inline-block me-3">
+                <input ng-model="account.gender" value="true" name="gender" type="radio" class="form-check float-start me-2">
+                <span>Nam</span>
+              </label>
+              <label class="d-inline-block">
+                <input ng-model="account.gender" value="false" name="gender" type="radio" class="form-check float-start me-2">
+                <span>Nữ</span>
+              </label>
             </div>
+          </div>
+          <div class="form-check ps-0 mt-2">
+            <button ng-click="signUp()" type="button" class="btn btn-login float-right mt-2">Đăng ký</button>
+          </div>
+        </form>
+      </div>
+    </div>
+</body>
 
-            <script>
-    var app = angular.module('myApp', []);
-    app.controller('myCtrl', $scope => {
-
-    });
-  </script>
-        </body>
-
-    </html>
+</html>
