--- a/mon-hoc.html
+++ b/mon-hoc.html
@@ -1,61 +1,11 @@
-<div class="row">
-    <a class="col-4 pb-3 px-2 d-block" href="#" style="text-decoration: none;">
-        <div class="card">
+<div class="row w-100 mx-0 p-2 py-3 bg-white rounded shadow-sm">
+    <a ng-repeat="item in asideA" class="col-6 col-md-4 col-lg-3 pb-3 px-2 d-block" href="#" style="text-decoration: none;">
+        <div class="card h-100 border border-primary" style="background-color: #cff;">
             <div class="card card-body rounded-0">
-                <img class="w-100 h-100" src="./img/logos/ADBS.jpg"/>
+                <img class="w-100 h-100" src="./img/logos/{{item.logo}}"/>
             </div>
-            <div class="card card-footer text-center">
-                Lập trình android nâng cao
-            </div>
-        </div>
-    </a>
-    <a class="col-4 pb-3 px-2 d-block" href="#" style="text-decoration: none;">
-        <div class="card">
-            <div class="card card-body rounded-0">
-                <img class="w-100 h-100" src="./img/logos/ADBS.jpg"/>
-            </div>
-            <div class="card card-footer text-center">
-                Lập trình android nâng cao
-            </div>
-        </div>
-    </a>
-    <a class="col-4 pb-3 px-2 d-block" href="#" style="text-decoration: none;">
-        <div class="card">
-            <div class="card card-body rounded-0">
-                <img class="w-100 h-100" src="./img/logos/ADBS.jpg"/>
-            </div>
-            <div class="card card-footer text-center">
-                Lập trình android nâng cao
-            </div>
-        </div>
-    </a>
-    <a class="col-4 pb-3 px-2 d-block" href="#" style="text-decoration: none;">
-        <div class="card">
-            <div class="card card-body rounded-0">
-                <img class="w-100 h-100" src="./img/logos/ADBS.jpg"/>
-            </div>
-            <div class="card card-footer text-center">
-                Lập trình android nâng cao
-            </div>
-        </div>
-    </a>
-    <a class="col-4 pb-3 px-2 d-block" href="#" style="text-decoration: none;">
-        <div class="card">
-            <div class="card card-body rounded-0">
-                <img class="w-100 h-100" src="./img/logos/ADBS.jpg"/>
-            </div>
-            <div class="card card-footer text-center">
-                Lập trình android nâng cao
-            </div>
-        </div>
-    </a>
-    <a class="col-4 pb-3 px-2 d-block" href="#" style="text-decoration: none;">
-        <div class="card">
-            <div class="card card-body rounded-0">
-                <img class="w-100 h-100" src="./img/logos/ADBS.jpg"/>
-            </div>
-            <div class="card card-footer text-center">
-                Lập trình android nâng cao
+            <div class="card card-footer text-center h-100">
+                {{item.name}}
             </div>
         </div>
     </a>
