--- a/dang-nhap.html
+++ b/dang-nhap.html
@@ -98,7 +98,7 @@
   </head>
 
   <body class="container login-block">
-    <div class="mx-auto" style="width:30rem;">
+    <div class="mx-auto" style="max-width:30rem;">
       <div class="panel">
         <div class="login-sec">
           <h2 class="text-center">ĐĂNG NHẬP</h2>
