Xong Lịch sử và kiểm tra

--- a/gop-y.html
+++ b/gop-y.html
@@ -1,6 +1,6 @@
 <div class="card">
-    <div class="card-header">
-        <b>GỚP Ý</b>
+    <div class="card-header text-primary">
+        <b class="bi bi-envelope-fill"> GỚP Ý</b>
     </div>
     <div class="card-body">
        <div class="row">
