--- a/lien-he.html
+++ b/lien-he.html
@@ -1,7 +1,7 @@
 
     <form class="mb-3" method="get">
-            <div class="card card-header">
-                <b>LIÊN HỆ</b>
+            <div class="card card-header bg-light text-primary">
+                <b class="bi bi-phone-fill"> LIÊN HỆ</b>
             </div>
 
             <div class="card card-body rounded-0">
