--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -1,7 +1,7 @@
 <div class="card">
-    <b class="card card-header">
-        GIỚI THIỆU
-    </b>
+    <div class="card card-header text-primary">
+        <b class="bi bi-people-fill"> GIỚI THIỆU</b>
+    </div>
     <div class="card body rounded-0 p-3">
         <h4>Online Training ?</h3>
         <p>
