--- a/hoi-dap.html
+++ b/hoi-dap.html
@@ -1,6 +1,6 @@
 <div class="card">
-    <div class="card-header">
-        <b>HỎI ĐÁP</b>
+    <div class="card-header text-primary">
+        <b class="bi bi-question-octagon-fill"> HỎI ĐÁP</b>
     </div>
     <div class="card-body">
        <div class="row">
