--- a/mon-hoc.html
+++ b/mon-hoc.html
@@ -1,12 +1,17 @@
-<div class="row w-100 mx-0 p-2 py-3 bg-white rounded shadow-sm">
-    <a ng-repeat="item in asideA" class="col-6 col-md-4 col-lg-3 pb-3 px-2 d-block" href="#" style="text-decoration: none;">
-        <div class="card h-100 border border-primary" style="background-color: #cff;">
-            <div class="card card-body rounded-0">
-                <img class="w-100 h-100" src="./img/logos/{{item.logo}}"/>
+<div class="card card-header bg-light text-primary">
+    <b class="bi bi-book-fill"> Danh sách môn học</b>
+</div>
+<div class="card card-body">
+    <div class="row w-100 mx-0 p-0 pt-3 bg-white">
+        <a ng-repeat="item in asideA" class="col-6 col-lg-4 pb-4 px-3 d-block" href="#!trac-nghiem/{{item.id}}" style="text-decoration: none;">
+            <div class="card h-100 border border-primary bg-hover">
+                <div class="card card-body rounded-0">
+                    <img class="w-100 h-100" src="./img/logos/{{item.logo}}"/>
+                </div>
+                <div class="card card-footer text-center h-100">
+                    {{item.name}}
+                </div>
             </div>
-            <div class="card card-footer text-center h-100">
-                {{item.name}}
-            </div>
-        </div>
-    </a>
+        </a>
+    </div>
 </div>
